--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "auth0-spa-js": "^1.6.5",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.17.3",
@@ -19,6 +21,9 @@
     "jquery": "^3.6.0",
     "npm": "^7.10.0",
     "vue": "^2.6.11",
+    "vue-lazy": "^0.2.4",
+    "vue-lazy-images": "^1.4.6",
+    "vue-lazyload": "github:hilongjw/vue-lazyload",
     "vue-router": "^3.2.0",
     "vue-router-middleware": "^0.2.1",
     "vue-session": "^1.0.0",
